--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -1,16 +1,22 @@
 <header class="p-1 w-full fixed top-0 z-50 flex justify-between  px-10 bg-gradient-to-r from-primary to-black">
   <div class="flex items-center   gap-6  ">
-    <a class="max-h-16 text-white border-r-white border-r-2 pr-6 flex items-center gap-3 " href="#">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-        <path
-          d="M4.5 6.375a4.125 4.125 0 1 1 8.25 0 4.125 4.125 0 0 1-8.25 0ZM14.25 8.625a3.375 3.375 0 1 1 6.75 0 3.375 3.375 0 0 1-6.75 0ZM1.5 19.125a7.125 7.125 0 0 1 14.25 0v.003l-.001.119a.75.75 0 0 1-.363.63 13.067 13.067 0 0 1-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 0 1-.364-.63l-.001-.122ZM17.25 19.128l-.001.144a2.25 2.25 0 0 1-.233.96 10.088 10.088 0 0 0 5.06-1.01.75.75 0 0 0 .42-.643 4.875 4.875 0 0 0-6.957-4.611 8.586 8.586 0 0 1 1.71 5.157v.003Z" />
-      </svg>
-      <span class="text-2xl font-semibold uppercase">Dating App</span>
-    </a>
+    <div class="text-white">
+      <a routerLink="/" routerLinkActive="text-accent" [routerLinkActiveOptions]="{ exact: true }"
+        class="max-h-16  border-r-white border-r-2 pr-6 flex items-center gap-3 " href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+          <path
+            d="M4.5 6.375a4.125 4.125 0 1 1 8.25 0 4.125 4.125 0 0 1-8.25 0ZM14.25 8.625a3.375 3.375 0 1 1 6.75 0 3.375 3.375 0 0 1-6.75 0ZM1.5 19.125a7.125 7.125 0 0 1 14.25 0v.003l-.001.119a.75.75 0 0 1-.363.63 13.067 13.067 0 0 1-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 0 1-.364-.63l-.001-.122ZM17.25 19.128l-.001.144a2.25 2.25 0 0 1-.233.96 10.088 10.088 0 0 0 5.06-1.01.75.75 0 0 0 .42-.643 4.875 4.875 0 0 0-6.957-4.611 8.586 8.586 0 0 1 1.71 5.157v.003Z" />
+        </svg>
+        <span class="text-2xl font-semibold uppercase">Dating App</span>
+      </a>
+    </div>
+
     <nav class="flex  gap-3 my-2 uppercase text-lg text-white">
-      <a href="">Matches</a>
-      <a href="">List</a>
-      <a href="">Message</a>
+      @if (accountService.currentUser()) {
+      <a routerLink="/members" routerLinkActive="text-accent">Members</a>
+      <a routerLink="/list" routerLinkActive="text-accent">List</a>
+      <a routerLink="/messages" routerLinkActive="text-accent">Messages</a>}
+
     </nav>
 
   </div>
@@ -24,7 +30,7 @@
       </div>
       <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
         <li><a>Edit profile </a></li>
-        <li><a  (click)="logout()">Logout</a></li>
+        <li><a (click)="logout()">Logout</a></li>
       </ul>
     </div>
     } @else {
