handle error api and cllient

--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -15,7 +15,8 @@
       @if (accountService.currentUser()) {
       <a routerLink="/members" routerLinkActive="text-accent">Members</a>
       <a routerLink="/list" routerLinkActive="text-accent">List</a>
-      <a routerLink="/messages" routerLinkActive="text-accent">Messages</a>}
+      <a routerLink="/messages" routerLinkActive="text-accent">Messages</a>
+      <a routerLink="/test-errors" routerLinkActive="text-accent">Test Errors</a>}
 
     </nav>
 
